# supercharger

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: supercharger.cpp
cpp/app/: algorithm_comparison.cpp  failure_modes.cpp  supercharger.cpp
cpp/bindings/: CMakeLists.txt  algorithm.cpp  math.cpp  module.cpp  network.cpp  node.cpp  optimize.cpp  optimizer.cpp  planner.cpp  supercharger.cpp  types.cpp
cpp/bindings/algorithm/: algorithm.cpp
cpp/include/: logging.h  math.h  network.h  node.h  planner.h
cpp/include/algorithm/: algorithm.h  astar.h  dijkstras.h  naive.h
cpp/include/optimizer/: nloptimizer.h  optimizer.h
cpp/include/supercharger/: logging.h  math.h  network.h  node.h  planner.h  supercharger.h  types.h  utils.h
cpp/include/supercharger/algorithm/: algorithm.h  astar.h  dijkstras.h  naive.h  planner.h
cpp/include/supercharger/algorithm/cost_functions/: dijkstras.h
cpp/include/supercharger/math/: math.h
cpp/include/supercharger/optimize/: naive.h  nlopt.h  nloptimizer.h  optimizer.h
cpp/include/supercharger/optimizer/: naive.h  nloptimizer.h  optimizer.h
cpp/src/: network.cpp  node.cpp  planner.cpp
cpp/src/algorithm/: algorithm.cpp  astar.cpp  dijkstras.cpp  naive.cpp
cpp/src/optimizer/: naive.cpp  nloptimizer.cpp  optimizer.cpp
cpp/src/supercharger/: network.cpp  node.cpp  planner.cpp  supercharger.cpp  types.cpp
cpp/src/supercharger/algorithm/: algorithm.cpp  astar.cpp  dijkstras.cpp  naive.cpp  planner.cpp
cpp/src/supercharger/algorithm/cost_functions/: dijkstras.cpp
cpp/src/supercharger/optimize/: naive.cpp  nlopt.cpp  nloptimizer.cpp  optimizer.cpp
cpp/src/supercharger/optimizer/: naive.cpp  nloptimizer.cpp  optimizer.cpp
cpp/test/: CMakeLists.txt  test_algorithm.cpp  test_math.cpp  test_supercharger.cpp  test_types.cpp
cpp/test/algorithm/: test_astar.cpp  test_dijkstras.cpp  test_planner.cpp
cpp/test/optimize/: test_nlopt.cpp  test_nloptimizer.cpp
cpp/test/optimizer/: test_nloptimizer.cpp
include/: algorithm.h  logging.h  math.h  network.h  node.h  planner.h  stop.h
include/algorithm/: algorithm.h  astar.h  brute_force.h  dijkstras.h  naive.h
include/optimizer/: naive.h  optimizer.h
python/env/: supercharger.yml
python/example/: algorithm_comparison.py  demo.py  dijkstras_optimized_cost.py  optimization_demo.py  planner_demo.py  run_checker.py  simple_algorithm_comparison.py  statistical_algo_comparison.py  supercharger_demo.py
python/sandbox/: optimization.py  optimization_demo.py
python/src/supercharger/: optimizer.py  types.py
python/src/supercharger/optimize/: __init__.py  _constraints.py  _cost.py  _optimizer.py  constraints.py  optimizer.py
python/src/supercharger/utils/: logger.py  paths.py  plotly.py  plotting.py  subprocess.py
python/test/supercharger/: test_optimizer.py
python/tests/supercharger/: test_cost.py  test_optimizer.py
src/: algorithm.cpp  network.cpp  node.cpp  planner.cpp
src/algorithm/: algorithm.cpp  astar.cpp  brute_force.cpp  dijkstras.cpp  naive.cpp
src/optimizer/: naive.cpp  optimizer.cpp
test/: CMakeLists.txt  test_math.cpp
